--- a/horizontal-idea/css/reset.css
+++ b/horizontal-idea/css/reset.css
@@ -357,6 +357,10 @@ textarea {
     resize: vertical;
 }
 
+a, a:hover, a:visited, a:active, a:focus {
+    text-decoration: none;
+}
+
 .chromeframe {
     margin: 0.2em 0;
     background: #ccc;
