--- a/horizontal-idea/css/style.css
+++ b/horizontal-idea/css/style.css
@@ -255,6 +255,7 @@ html {
 
 .position-arrow {
   position: fixed;
+  z-index: 10;
   transform: translate(-50%, 0);
   transform-origin: left top;
   bottom: 32px;
@@ -294,6 +295,15 @@ html {
   animation: MoveUpDown 1s cubic-bezier(1, 0.66, 0, 0.24) infinite;
 }
 
+.websites-rotator {
+  position: absolute;
+}
+
+.websites-rotator-fixed {
+  position: relative;
+  flex-direction: row-reverse;
+}
+
 .website-element {
   background-size: cover;
   background-repeat: no-repeat;
@@ -302,6 +312,9 @@ html {
   filter: sepia(70%);
   transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
   animation: MoveUpDownWebsites 5s linear infinite;
+  -webkit-box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
 }
 
 .website-element:hover {
@@ -312,20 +325,29 @@ html {
 .element-1 {
   background-image: url("../img/web/ekomar-layout.jpg");
   animation-delay: 1s;
+  margin-left: -9000px;
 }
 
 .element-2 {
   background-image: url("../img/web/bustaxi-layout.png");
   animation-delay: 500ms;
+  margin-left: -6000px;
 }
 
 .element-3 {
   background-image: url("../img/web/rajdykonne-layout.jpg");
+  margin-left: -4000px;
 }
 
 .element-4 {
   background-image: url("../img/web/tpr-layout.png");
   animation-delay: 2s;
+  margin-left: -2000px;
+}
+
+.slide-in-left {
+  margin-left: 0;
+  transition: 1s cubic-bezier(0.42, 0, 1, 1) !important;
 }
 
 .rotate-border:before {
