--- a/horizontal-idea/css/style.css
+++ b/horizontal-idea/css/style.css
@@ -81,6 +81,12 @@ html {
   right: 0;
 }
 
+.neumorphic-shadow-social {
+  border-radius: 5px;
+  padding: 3.6px 5px;
+  box-shadow: #000000 2px 2px 4px, #4d4d4d -2px -2px 4px;
+}
+
 .background-gradient-black {
   background: #1e1e1e;
   background: linear-gradient(0deg, #1e1e1e 0%, #3e3e3e 100%);
@@ -167,6 +173,10 @@ html {
   margin-top: 80px;
 }
 
+.m-t-160 {
+  margin-top: 160px;
+}
+
 .m-t--30 {
   margin-top: -30px;
 }
@@ -179,9 +189,16 @@ html {
   width: 100%;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .social-media {
+  padding: 5px;
+  margin: 25px;
   color: #ffe08a;
   font-size: 1.8em;
+  z-index: 10;
 }
 
 .scalable-logo {
@@ -190,6 +207,7 @@ html {
   left: 50%;
   transform: translate(-50%, 0);
   transform-origin: left top;
+  z-index: 10;
 }
 
 .name {
@@ -253,6 +271,20 @@ html {
   box-sizing: border-box;
 }
 
+.round-border-back {
+  position: relative;
+  width: 85px;
+  height: 85px;
+  box-sizing: border-box;
+}
+
+.fit-whole-screen {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background: linear-gradient(0deg, #32505a 0%, #1f3035 100%);
+}
+
 .position-arrow {
   position: fixed;
   z-index: 10;
@@ -261,6 +293,17 @@ html {
   bottom: 32px;
   left: 50%;
   transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+}
+
+.position-arrow-back {
+  position: fixed;
+  z-index: 10;
+  transform-origin: left top;
+  bottom: 32px;
+  left: 15%;
+  top: 15%;
+  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+  animation: MoveUpDown 10s linear infinite;
 }
 
 .right-bottom {
@@ -295,13 +338,29 @@ html {
   animation: MoveUpDown 1s cubic-bezier(1, 0.66, 0, 0.24) infinite;
 }
 
+.move-left-right {
+  z-index: 2;
+  position: relative;
+}
+
+.move-left-right:hover {
+  position: relative;
+  transform: translateY(0);
+  will-change: transform;
+  animation: MoveLeftRight 1s cubic-bezier(1, 0.66, 0, 0.24) infinite;
+}
+
+.display-none {
+  display: none;
+}
+
 .websites-rotator {
   position: absolute;
 }
 
 .websites-rotator-fixed {
   position: relative;
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 
 .website-element {
@@ -310,16 +369,35 @@ html {
   width: 300px;
   height: 400px;
   filter: sepia(70%);
+  margin-right: 10%;
   transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
   animation: MoveUpDownWebsites 5s linear infinite;
-  -webkit-box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 38px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.websites-text-size {
+  width: 400px;
+  text-align: justify;
+  color: #ffe08a;
+}
+
+.website-element-one {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 300px;
+  height: 400px;
+  filter: sepia(70%);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.scale-website-element {
+  transform: scale(1.25);
 }
 
 .website-element:hover {
   filter: sepia(0);
-  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .element-1 {
@@ -332,6 +410,7 @@ html {
   background-image: url("../img/web/bustaxi-layout.png");
   animation-delay: 500ms;
   margin-left: -6000px;
+  transform: scale(1.25);
 }
 
 .element-3 {
@@ -345,8 +424,25 @@ html {
   margin-left: -2000px;
 }
 
+.element-1-big {
+  background-image: url("../img/web/ekomar-layout.jpg");
+}
+
+.element-2-big {
+  background-image: url("../img/web/bustaxi-layout.png");
+}
+
+.element-3-big {
+  background-image: url("../img/web/rajdykonne-layout.jpg");
+}
+
+.element-4-big {
+  background-image: url("../img/web/tpr-layout.png");
+}
+
 .slide-in-left {
   margin-left: 0;
+  will-change: transform;
   transition: 1s cubic-bezier(0.42, 0, 1, 1) !important;
 }
 
@@ -378,6 +474,14 @@ html {
   }
   50% {
     transform: translateY(5px);
+  }
+}
+@keyframes MoveLeftRight {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-5px);
   }
 }
 @keyframes MoveUpDownWebsites {
